--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^3.15.1",
+    "@blueprintjs/datetime": "^3.9.0",
+    "@blueprintjs/select": "^3.8.0",
+    "@blueprintjs/table": "^3.5.0",
     "@types/jest": "24.0.11",
     "@types/node": "11.11.6",
     "@types/react": "16.8.8",
