--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.3",
     "@types/react-router-dom": "^4.3.1",
+    "@types/styled-components": "^5.1.11",
     "ag-grid-community": "^20.2.0",
     "ag-grid-react": "^20.2.0",
     "antd": "^3.15.1",
@@ -23,7 +24,8 @@
     "react-dom": "^16.8.5",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "typescript": "3.3.4000"
+    "styled-components": "^5.3.0",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-app-rewired start",
